--- a/index.html
+++ b/index.html
@@ -16,25 +16,33 @@
         <li>
             layout
             <ul>
-                <li><a href="./doc/layout01.html">layout 01</a></li>
-                <li><a href="./doc/layout02.html">layout 02</a></li>
-                <li><a href="./doc/layout03.html">layout 03</a></li>
+                <li><a href="./doc/layout01.html" target="_blank">layout 01</a></li>
+                <li><a href="./doc/layout02.html" target="_blank">layout 02</a></li>
+                <li><a href="./doc/layout03.html" target="_blank">layout 03</a></li>
             </ul>
         </li>
         <li>header
             <ul>
-                <li><a href="./doc/header01.html">header 01</a></li>
-                <li><a href="./doc/header02-sticky.html">header 02 - sticky</a></li>
-                <li><a href="./doc/header03.html">header 03</a></li>
+                <li><a href="./doc/header01.html" target="_blank">header 01</a></li>
+                <li><a href="./doc/header02-sticky.html" target="_blank">header 02 - sticky</a></li>
+                <li><a href="./doc/header03.html" target="_blank">header 03</a></li>
             </ul>
         </li>
         <li>다단 메뉴
             <ul>
-                <li><a href="./doc/dadan-menu01.html">다단 메뉴 01</a></li>
-                <li><a href="./doc/dadan-menu02.html">다단 메뉴 02</a></li>
-                <li><a href="./doc/dadan-menu03.html">다단 메뉴 03</a></li>
+                <li><a href="./doc/dadan-menu01.html" target="_blank">다단 메뉴 01</a></li>
+                <li><a href="./doc/dadan-menu02.html" target="_blank">다단 메뉴 02</a></li>
+                <li><a href="./doc/dadan-menu03.html" target="_blank">다단 메뉴 03</a></li>
+                <li><a href="./doc/dadan-menu04.html" target="_blank">다단 메뉴 04</a></li>
             </ul>
         </li>
+        <li>background
+            <ul>
+                <li><a href="./doc/background01.html" target="_blank">background 01</a></li>
+                <li><a href="./doc/background02.html" target="_blank">background 02 패턴 넣기</a></li>
+            </ul>
+        </li>
+        <li><a href="./doc/pseudo-element01.html" target="_blank">가상요소로 디자인</a></li>
     </ul>
 </body>
 
