--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@
             </ul>
         </li>
         <li><a href="./doc/pseudo-element01.html" target="_blank">가상요소로 디자인</a></li>
+        <li>영상 삽입
+            <ul>
+                <li><a href="./doc/video01.html" target="_blank">mp4 영상</a></li>
+                <li><a href="./doc/video02.html" target="_blank">mp4 영상 js로 button 컨트롤</a></li>
+                <li><a href="./doc/utb.html" target="_blank">유튜브 영상 넣기</a></li>
+
+            </ul>
+        </li>
     </ul>
 </body>
 
