--- a/index.html
+++ b/index.html
@@ -48,7 +48,14 @@
                 <li><a href="./doc/video01.html" target="_blank">mp4 영상</a></li>
                 <li><a href="./doc/video02.html" target="_blank">mp4 영상 js로 button 컨트롤</a></li>
                 <li><a href="./doc/utb.html" target="_blank">유튜브 영상 넣기</a></li>
-
+            </ul>
+        </li>
+        <li>slick을 이용해 슬라이드 만들기
+            <ul>
+                <li><a href="./doc/slick01.html" target="_blank">slick 01 : 슬라이드 넣어보기</a></li>
+                <li><a href="./doc/slick02.html" target="_blank">slick 02 : 슬라이드 안에 요소들을 조절하기</a></li>
+                <li><a href="./doc/slick03.html" target="_blank">slick 03 : flex로 슬라이드 가로배열</a></li>
+                <li><a href="./doc/slick04.html" target="_blank">slick 04 : 슬라이드 2개 합치기</a></li>
             </ul>
         </li>
     </ul>
